app/assets/stylesheets/style.css.sass
@import bourbon/bourbon
@import clear
@import fonts

$reg_text: 'proxima_nova_rgregular'
$bold_text: 'proxima_nova_rgbold'
$black_text: 'proxima_novablack'
$dark_text: #333333
$link: #a76262

body
  font-family: $reg_text, sans-serif
  +animation (fade-in 1s)

// +keyframes (fade-in)
//   0%
//     opacity: 0

.container
  width: 94%
  max-width: 960px
  margin: auto

.container.title
  max-width: 660px

a
  font-family: $bold_text

p
  line-height: 1.2
  font-size: 20px
  color: white
  margin-bottom: 20px

h1
  font-size: 40px

h2
  color: white
  font-family: $bold_text
  font-size: 24px
  margin-bottom: 20px

header
  background: image-url('header.jpg') no-repeat
  background-size: cover
  background-position: 50% 50%
  width: 100%
  max-height: 350px
  padding-bottom: 8%
  margin-bottom: 20px

  h1
    color: white
    text-align: center
    font-size: 40px
    margin-bottom: 36px

.phrase
  +animation (drop 2s 1)

+keyframes (drop)
  0%
    +transform (translateY(-50px))
    opacity: 0
  40%
    +transform (translateY(-50px))
    opacity: 0

.logo
  display: block
  float: left
  font-size: 30px
  font-family: $black_text
  margin-right: 10px
  position: relative
  top: 3px
  margin-bottom: 0

  span
    font-family: $bold_text
    font-size: 20px
    position: relative
    top: -3px

.login
  float: right
  font-size: 14px
  text-transform: uppercase

  &:hover > a > .octocat
    +transform (rotate(360deg))

.login_bar
  width: 100%
  color: white
  background: rgba(white, .1)
  border-bottom: 4px solid rgba(white, .14)
  padding: 8px 0 12px
  margin-bottom: 56px
  +clearfix

  a
    color: white

.octocat
  display: inline-block
  width: 23px
  position: relative
  top: 6px
  margin-left: 4px
  +transition (all .4s ease-in-out)
  +transform (rotate(0))

.button
  display: block
  width: 100%
  max-width: 315px
  height: 60px
  margin:  0 auto
  text-align: center
  font-family: $bold_text
  font-size: 20px
  color: white
  background: rgba(white, .1)
  border: 4px solid rgba(white, .14)
  border-radius: 8px
  padding: 17px 24px 0
  +transition (all .4s)
  +animation (scale-in 2s 1)

  &:hover
    color: $link
    background: rgba(white, .8)
    border: 4px solid rgba(white, .84)

+keyframes (scale-in)
  0%
    +transform (scale(0))
  80%
    +transform (scale(0))
  90%
    +transform (scale(1.1))

.info
  margin-bottom: 40px

.nav
  padding-bottom: 20px
  border-bottom: 2px solid #eee2e2
  font-family: $bold_text
  margin-bottom: 30px
  +clearfix

  a
    color: $dark_text

.nav_icon
  float: left
  width: 20%
  opacity: .4
  text-align: center
  +transition (all .4s)

  &:hover
    opacity: 1
    +transform (translateY(-2px))

html.touch .nav_icon
  opacity: 1

.icon_calendar-mini, .icon_polls, .icon_about_us, .icon_tutorials, .icon_lightning
  position: relative
  margin-right: 6px

.calendar-mini
  span
    position: relative
    bottom: 5px

.icon_calendar-mini
  width: 19px

.polls
  span
    position: relative
    top: 5px

.icon_polls
  top: 6px
  width: 19px

.about_us
  span
    position: relative
    bottom: 4px

.icon_about_us
  width: 23px

.mobile_about
  display: none

.tutorials
  span
    position: relative
    bottom: 3px

.icon_tutorials
  width: 12px
  top: 1px

.lightning
  span
    position: relative
    bottom: 5px

.mobile_talks
  display: none

.icon_lightning
  width: 13px

.icon_calendar
  width: 27px
  float: left
  position: relative
  top: 3px
  margin-right: 15px

.icon_clock
  position: relative
  top: 4px
  width: 21px
  margin-right: 18px

.next_meeting
  margin-bottom: 20px

.description
  line-height: 1.6

.presentation
  font-size: 20px
  margin-bottom: 15px

.presentation_resource_link
  margin-left: 44px
  color: $link

.date
  font-family: $bold_text

.about
  background: $dark_text
  color: white
  padding-top: 30px
  padding-bottom: 10px
  +clearfix


.icon_person
  width: 28px

.icon_join
  width: 26px

.icon_clipboard
  width: 18px

.icon_person, .icon_join, .icon_clipboard
  display: block
  margin: 0 auto 20px

.info_column
  width: 33%
  padding: 0 2% 0
  float: left
  a
    color: $link

  &:first-child
    padding: 0 2% 0 0

  &:last-child
    padding: 0 0 0 2%

  h2
    text-align: center

.getting_started
  background: image-url('bottom.jpg') no-repeat
  background-size: cover
  background-position: 50% 50%
  width: 100%
  padding: 40px 0
  margin-bottom: 20px

  a
    color: white

  .container
    p
      &:last-of-type
        margin-bottom: 30px

footer
  text-align: center
  p
    color: $dark_text
  a
    color: $link

@import media_queries

